k8s/echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: gcr.io/microservices-k8s-demo-460710/echo:latest # TODO: Make it not hardcoded
#        image: gcr.io/$PROJECT_ID/echo:latest
        ports:
        - containerPort: 5001
