k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/microservices-k8s-demo-460710/frontend:latest
#        image: gcr.io/${PROJECT_ID}/backend:latest

        ports:
        - containerPort: FRONTEND_PORT
          # Note: FRONTEND_PORT is defined in the ConfigMap, so it should be set to the value from the ConfigMap.
          # If you want to use a specific port, you can replace FRONTEND_PORT with the actual port number.
          # For example, if FRONTEND_PORT is 3000, you can set containerPort: 3000.

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
