k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
#  annotations:
#    networking.gke.io/v1beta1.FrontendConfig: demo-frontend-config
spec:
  ingressClassName: "nginx"
#  ingressClassName: "gce" # No need to specify this if using GKE with default Ingress class
#  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /ping
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 80
